--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.6",
-    "@angular/compiler": "^2.4.6",
-    "@angular/core": "^2.4.6",
-    "@angular/forms": "^2.4.6",
-    "@angular/http": "^2.4.6",
-    "@angular/platform-browser": "^2.4.6",
-    "@angular/platform-browser-dynamic": "^2.4.6",
-    "@angular/router": "^3.4.0",
-    "core-js": "^2.0.0-beta.4",
-    "rxjs": "5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.4"
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.2.0",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.6",
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
-    "@angular/cli": "1.0.0-beta.30",
-    "codelyzer": "~2.0.0-beta.4",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/jasmine": "^2.5.46",
+    "@types/node": "^7.0.10",
+    "@angular/cli": "1.0.0",
+    "codelyzer": "~3.0.0-beta.4",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.1.4",
-    "webdriver-manager": "10.2.5"
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "5.1.1",
+    "ts-node": "3.0.2",
+    "tslint": "4.5.1",
+    "typescript": "~2.1.5",
+    "webdriver-manager": "12.0.4"
   }
 }
