chore(build): init firebase

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /tmp
 
 # dependencies
-/node_modules
+node_modules
 /bower_components
 
 # IDEs and editors
@@ -25,6 +25,9 @@
 npm-debug.log
 testem.log
 /typings
+
+#firebase configs
+/src/environments/firebase*
 
 # e2e
 /e2e/*.js
