--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
+    "firebase": "^3.8.0",
     "rxjs": "5.2.0",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
+    "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "^2.5.46",
     "@types/node": "^7.0.10",
-    "@angular/cli": "1.0.0",
     "codelyzer": "~3.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
