--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jasmine": "^2.5.46",
     "@types/node": "^7.0.10",
     "codelyzer": "~3.0.0-beta.4",
+    "firebase-admin": "^4.2.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.5.0",
