--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
@@ -24,6 +25,7 @@
     "core-js": "^2.4.1",
     "firebase": "^3.8.0",
     "rxjs": "5.2.0",
+    "showdown": "^1.6.4",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.5"
   },
