--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
+    "@angular/service-worker": "^1.0.0-beta.14",
     "core-js": "^2.4.1",
     "rxjs": "5.2.0",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "1.0.4",
+    "@angular/compiler-cli": "^4.1.3",
     "@types/jasmine": "^2.5.46",
     "@types/node": "^7.0.10",
-    "@angular/cli": "1.0.0",
     "codelyzer": "~3.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
@@ -41,7 +42,7 @@
     "protractor": "5.1.1",
     "ts-node": "3.0.2",
     "tslint": "4.5.1",
-    "typescript": "~2.1.5",
+    "typescript": "~2.3.2",
     "webdriver-manager": "12.0.4"
   }
 }
