--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/router": "^4.1.3",
-    "@angular/service-worker": "^1.0.0-beta.14",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/router": "^4.3.1",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": "^2.4.1",
     "rxjs": "5.2.0",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "^4.1.3",
+    "@angular/cli": "^1.2.5",
+    "@angular/compiler-cli": "^4.3.1",
     "@types/jasmine": "^2.5.46",
     "@types/node": "^7.0.10",
     "codelyzer": "~3.0.0-beta.4",
